# MemoryGateway

./: .coverage  .env.example  .gitignore  Dockerfile  HANDOFF.md  MIGRATION_GUIDE.md  README.md  architecture_v2.md  audit_report.md  benchmark_results.md  docker-compose.yml  prefix_cache_strategy.md  prioritized_fix_list.md  prompt_template_library.md  pyproject.toml  requirements-dev.txt  requirements.txt  risk_register.md  roadmap_v2.md  summary-report.md  updated_ADRs.md
docs/coder-swarm/: coder-system-prompt.md
gateway/: canonicalizer.py  config.py  logger.py  main.py  models.py  proxy.py  router.py  stats.py
gateway/artifact/: __init__.py  schemas.py  store.py
gateway/cache/: exact.py
gateway/context/: __init__.py  schemas.py  store.py
gateway/indexer/: __init__.py  embedder.py  parser.py  qdrant_store.py  schemas.py
gateway/learning/: __init__.py  schemas.py  store.py
gateway/memory/: __init__.py  generator.py  schemas.py  store.py
gateway/memory_layer/: __init__.py  schemas.py  store.py
gateway/metrics/: __init__.py  cost.py  dashboard.py  prometheus.py  schemas.py
gateway/semantic_cache/: __init__.py  schemas.py  store.py
gateway/telemetry/: __init__.py  baseline.py  (+3 more)
scripts/: _write_hook.py  post-commit
tests/: benchmark_cache.py  benchmark_canonicalizer.py  benchmark_indexer.py  benchmark_memory.py  test_artifact.py  test_cache.py  test_canonicalizer.py  test_context.py  test_failure.py  test_indexer.py  test_integration.py  test_learning.py  test_memory.py  test_memory_layer.py  test_metrics.py  test_semantic_cache.py  test_unit.py
(+2 files in other folders)
